# TempRenderer

./: CMakeLists.txt  README.md  main.cpp
asset/: cube.h
core/: color.h  matrix4f.h  transform.h  triangle.h  vector3f.h  vertex.h
render/: renderer.cpp  renderer.h  screen.cpp  screen.h
runtime/core/: angle.h  color.h  math.cpp  math.h  matrix4f.cpp  matrix4f.h  transform.h  triangle.h  vector2f.h  vector3f.cpp  vector3f.h  vector4f.h  vertex.h
runtime/render/: Perception.md  camera.cpp  camera.h  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  screen.h  texture.cpp  texture.h
runtime/render/light/: ambient.h  direction.h  light.cpp  light.h
runtime/resource/: config.cpp  config.h  cube.h  sphere.h
runtime/util/: application.cpp  application.h  screen.cpp  screen.h
scene/: index.cpp  index.h
